--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,13 +38,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android.gms:play-services-maps:18.0.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Firebase.
     implementation 'com.google.firebase:firebase-auth:21.0.8'
+    implementation 'com.google.firebase:firebase-database:20.0.6'
+
+    // Google maps.
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
     // Image Labeling ML Kit.
     implementation 'com.google.mlkit:image-labeling:17.0.7'
