Profile activity, User model, find nearest sight function-not work.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
 
     // Image Labeling ML Kit.
     implementation 'com.google.mlkit:image-labeling:17.0.7'
+
+    // Translate text ML Kit.
+    implementation 'com.google.mlkit:translate:17.0.1'
 }
