--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    packagingOptions{
+        exclude 'META-INF/NOTICE.md'
+        exclude 'META-INF/LICENSE.md'
+    }
 }
 
 dependencies {
@@ -41,6 +46,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Email.
+    implementation 'com.sun.mail:android-mail:1.6.6'
+    implementation 'com.sun.mail:android-activation:1.6.7'
 
     // Firebase.
     implementation 'com.google.firebase:firebase-auth:21.0.8'
