--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,10 @@ dependencies {
     implementation 'com.sun.mail:android-activation:1.6.7'
 
     // Firebase.
-    implementation 'com.google.firebase:firebase-auth:21.0.8'
-    implementation 'com.google.firebase:firebase-database:20.0.6'
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation platform('com.google.firebase:firebase-bom:31.0.0')
 
     // Google maps.
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
@@ -66,4 +68,8 @@ dependencies {
 
     // Translate text ML Kit.
     implementation 'com.google.mlkit:translate:17.0.1'
+
+    // Identify language ML Kit.
+    implementation 'com.google.mlkit:language-id:17.0.4'
+    implementation 'com.google.android.gms:play-services-mlkit-language-id:17.0.0'
 }
