--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,7 @@ dependencies {
     // Identify language ML Kit.
     implementation 'com.google.mlkit:language-id:17.0.4'
     implementation 'com.google.android.gms:play-services-mlkit-language-id:17.0.0'
+
+    // Circle image view for sights list activity.
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
